--- a/style.css
+++ b/style.css
@@ -42,6 +42,8 @@ header h1 {
   flex-wrap: wrap;
   padding: 2rem;
   background: var(--white);
+   box-shadow: 0 6px 10px rgba(0,0,0,0.08);
+  transition: transform 0.6s;
 }
 
 .profile-pic {
@@ -112,8 +114,8 @@ h2 {
 }
 
 .card img, .card video {
-  width: 80%;
-  height: 500px;
+  width: 100%;
+  height: 550px;
   object-fit: cover;
 }
 
